--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html>
 <head>
-<title>302 Tagged Open Ruby Bugs as of 2021-08-20 02:51:37 +0900</title>
+<title>303 Tagged Open Ruby Bugs as of 2021-08-21 03:38:13 +0900</title>
 <link rel="stylesheet"  href="app.css" />
 </head>
 <body>
@@ -19,9 +19,9 @@
 <input type="submit" value="cygwin" />
 <input type="submit" value="encoding" />
 <input type="submit" value="regexp" />
-<input type="submit" value="refine" />
 <input type="submit" value="tracepoint" />
 <input type="submit" value="perf" />
+<input type="submit" value="refine" />
 <input type="submit" value="fiber" />
 <input type="submit" value="autoload" />
 <input type="submit" value="jit" />
@@ -32,9 +32,9 @@
 <input type="submit" value="unfixable" /></p>
 <label for="filter">Filter Tags:</label>
 <input id="filter" type="text" size="80" />
-(<span id="matched">302</span> matched)
+(<span id="matched">303</span> matched)
 <table>
-<caption>302 Tagged Open Ruby Bugs as of 2021-08-20 02:51:37 +0900</caption>
+<caption>303 Tagged Open Ruby Bugs as of 2021-08-21 03:38:13 +0900</caption>
 <thead>
 <tr class=" Tags ">
 <th>Bug ID</th>
@@ -43,6 +43,13 @@
 </tr>
 </thead>
 <tbody>
+<tr class=" patch core ">
+<td><a href="https://bugs.ruby-lang.org/issues/18123">18123</a>
+</td>
+<td>patch core</td>
+<td><a href="https://bugs.ruby-lang.org/issues/18123">addr2line.c: Define `SHF_COMPRESSED`</a>
+</td>
+</tr>
 <tr class=" patch core ">
 <td><a href="https://bugs.ruby-lang.org/issues/18121">18121</a>
 </td>
@@ -855,6 +862,13 @@
 <td><a href="https://bugs.ruby-lang.org/issues/16905">Ruby required to build Ruby on Haiku?</a>
 </td>
 </tr>
+<tr class=" tracepoint ">
+<td><a href="https://bugs.ruby-lang.org/issues/16889">16889</a>
+</td>
+<td>tracepoint</td>
+<td><a href="https://bugs.ruby-lang.org/issues/16889">TracePoint.enable { ... } also activates the TracePoint for other threads, even outside the block</a>
+</td>
+</tr>
 <tr class=" encoding ">
 <td><a href="https://bugs.ruby-lang.org/issues/16842">16842</a>
 </td>
@@ -1245,13 +1259,6 @@
 </td>
 <td>os/arch thread</td>
 <td><a href="https://bugs.ruby-lang.org/issues/14761">TestThread#test_join_limits hangs up on Solaris 10 with gcc</a>
-</td>
-</tr>
-<tr class=" refine ">
-<td><a href="https://bugs.ruby-lang.org/issues/14744">14744</a>
-</td>
-<td>refine</td>
-<td><a href="https://bugs.ruby-lang.org/issues/14744">Refinements modules have a superclass</a>
 </td>
 </tr>
 <tr class=" doc notbug ">
