--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html>
 <head>
-<title>303 Tagged Open Ruby Bugs as of 2021-08-21 03:38:13 +0900</title>
+<title>302 Tagged Open Ruby Bugs as of 2021-08-24 05:15:21 +0900</title>
 <link rel="stylesheet"  href="app.css" />
 </head>
 <body>
@@ -32,9 +32,9 @@
 <input type="submit" value="unfixable" /></p>
 <label for="filter">Filter Tags:</label>
 <input id="filter" type="text" size="80" />
-(<span id="matched">303</span> matched)
+(<span id="matched">302</span> matched)
 <table>
-<caption>303 Tagged Open Ruby Bugs as of 2021-08-21 03:38:13 +0900</caption>
+<caption>302 Tagged Open Ruby Bugs as of 2021-08-24 05:15:21 +0900</caption>
 <thead>
 <tr class=" Tags ">
 <th>Bug ID</th>
@@ -43,6 +43,13 @@
 </tr>
 </thead>
 <tbody>
+<tr class=" patch core ">
+<td><a href="https://bugs.ruby-lang.org/issues/18126">18126</a>
+</td>
+<td>patch core</td>
+<td><a href="https://bugs.ruby-lang.org/issues/18126">Process termination three seconds after thread termination dumps core</a>
+</td>
+</tr>
 <tr class=" patch core ">
 <td><a href="https://bugs.ruby-lang.org/issues/18123">18123</a>
 </td>
@@ -97,13 +104,6 @@
 </td>
 <td>patch build win</td>
 <td><a href="https://bugs.ruby-lang.org/issues/18079">[PATCH] make error for MinGW with Clang/LLVM + LLD</a>
-</td>
-</tr>
-<tr class=" patch core ">
-<td><a href="https://bugs.ruby-lang.org/issues/18077">18077</a>
-</td>
-<td>patch core</td>
-<td><a href="https://bugs.ruby-lang.org/issues/18077">Marshal.dump(closed_io) raises IOError instead of TypeError</a>
 </td>
 </tr>
 <tr class=" patch build ">
@@ -1224,13 +1224,6 @@
 </td>
 <td>win</td>
 <td><a href="https://bugs.ruby-lang.org/issues/14884">msys2 mingw32 &#39;rake&#39; has unexpected text at top of file</a>
-</td>
-</tr>
-<tr class=" tracepoint ">
-<td><a href="https://bugs.ruby-lang.org/issues/14870">14870</a>
-</td>
-<td>tracepoint</td>
-<td><a href="https://bugs.ruby-lang.org/issues/14870">Both TracePoint&#39;s :call and :c_call filters seem to skip a lot of builtin methods</a>
 </td>
 </tr>
 <tr class=" regexp notbug ">
