--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html>
 <head>
-<title>302 Tagged Open Ruby Bugs as of 2021-08-24 05:15:21 +0900</title>
+<title>307 Tagged Open Ruby Bugs as of 2021-08-27 07:13:20 +0900</title>
 <link rel="stylesheet"  href="app.css" />
 </head>
 <body>
@@ -32,9 +32,9 @@
 <input type="submit" value="unfixable" /></p>
 <label for="filter">Filter Tags:</label>
 <input id="filter" type="text" size="80" />
-(<span id="matched">302</span> matched)
+(<span id="matched">307</span> matched)
 <table>
-<caption>302 Tagged Open Ruby Bugs as of 2021-08-24 05:15:21 +0900</caption>
+<caption>307 Tagged Open Ruby Bugs as of 2021-08-27 07:13:20 +0900</caption>
 <thead>
 <tr class=" Tags ">
 <th>Bug ID</th>
@@ -43,6 +43,55 @@
 </tr>
 </thead>
 <tbody>
+<tr class=" win core ">
+<td><a href="https://bugs.ruby-lang.org/issues/18134">18134</a>
+</td>
+<td>win core</td>
+<td><a href="https://bugs.ruby-lang.org/issues/18134">Memory leak in master</a>
+</td>
+</tr>
+<tr class=" os/arch ">
+<td><a href="https://bugs.ruby-lang.org/issues/18133">18133</a>
+</td>
+<td>os/arch</td>
+<td><a href="https://bugs.ruby-lang.org/issues/18133">LTO: TestGCCompact#test_ast_compacts segfaults on i686</a>
+</td>
+</tr>
+<tr class=" thread ">
+<td><a href="https://bugs.ruby-lang.org/issues/18132">18132</a>
+</td>
+<td>thread</td>
+<td><a href="https://bugs.ruby-lang.org/issues/18132">TODO: fix ccan/list thread safety</a>
+</td>
+</tr>
+<tr class=" os/arch ">
+<td><a href="https://bugs.ruby-lang.org/issues/18131">18131</a>
+</td>
+<td>os/arch</td>
+<td><a href="https://bugs.ruby-lang.org/issues/18131">addr2line.c: Some inlined functions mistakenly shown</a>
+</td>
+</tr>
+<tr class=" patch ractor ">
+<td><a href="https://bugs.ruby-lang.org/issues/18130">18130</a>
+</td>
+<td>patch ractor</td>
+<td><a href="https://bugs.ruby-lang.org/issues/18130">Showing exceptions from Ractor on console causes errors</a>
+</td>
+</tr>
+<tr class=" ractor ">
+<td><a href="https://bugs.ruby-lang.org/issues/18129">18129</a>
+</td>
+<td>ractor</td>
+<td><a href="https://bugs.ruby-lang.org/issues/18129">Ractor-incompatible global variables can be accessed through alias</a>
+</td>
+</tr>
+<tr class=" ractor ">
+<td><a href="https://bugs.ruby-lang.org/issues/18128">18128</a>
+</td>
+<td>ractor</td>
+<td><a href="https://bugs.ruby-lang.org/issues/18128">Ractor allows class variables that have been used before</a>
+</td>
+</tr>
 <tr class=" patch core ">
 <td><a href="https://bugs.ruby-lang.org/issues/18126">18126</a>
 </td>
@@ -76,13 +125,6 @@
 </td>
 <td>ractor</td>
 <td><a href="https://bugs.ruby-lang.org/issues/18119">Ractor crashes when instantiating classes</a>
-</td>
-</tr>
-<tr class=" patch ractor ">
-<td><a href="https://bugs.ruby-lang.org/issues/18117">18117</a>
-</td>
-<td>patch ractor</td>
-<td><a href="https://bugs.ruby-lang.org/issues/18117">Segmentation fault when yielding values from Ractors during GC sweeping</a>
 </td>
 </tr>
 <tr class=" patch core ">
@@ -769,13 +811,6 @@
 </td>
 <td>core patch</td>
 <td><a href="https://bugs.ruby-lang.org/issues/17120">String#start_with? return wrong result for Regexp patterns containing /\K/</a>
-</td>
-</tr>
-<tr class=" build ">
-<td><a href="https://bugs.ruby-lang.org/issues/17052">17052</a>
-</td>
-<td>build</td>
-<td><a href="https://bugs.ruby-lang.org/issues/17052">Ruby with LTO enabled has issues with SIGSEGV handler</a>
 </td>
 </tr>
 <tr class=" patch core ">
@@ -1828,10 +1863,10 @@
 <td><a href="https://bugs.ruby-lang.org/issues/10580">TestProcess#test_deadlock_by_signal_at_forking fails on ARM</a>
 </td>
 </tr>
-<tr class=" tracepoint ">
+<tr class=" patch tracepoint ">
 <td><a href="https://bugs.ruby-lang.org/issues/10470">10470</a>
 </td>
-<td>tracepoint</td>
+<td>patch tracepoint</td>
 <td><a href="https://bugs.ruby-lang.org/issues/10470">TracePoint cannot trace attr_accessor/reader/writer method</a>
 </td>
 </tr>
