--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html>
 <head>
-<title>306 Tagged Open Ruby Bugs as of 2021-09-03 05:45:19 +0900</title>
+<title>309 Tagged Open Ruby Bugs as of 2021-09-14 04:41:12 +0900</title>
 <link rel="stylesheet"  href="app.css" />
 </head>
 <body>
@@ -27,14 +27,13 @@
 <input type="submit" value="autoload" />
 <input type="submit" value="parser" />
 <input type="submit" value="doc" />
-<input type="submit" value="irb" />
 <input type="submit" value="misc" />
 <input type="submit" value="unfixable" /></p>
 <label for="filter">Filter Tags:</label>
 <input id="filter" type="text" size="80" />
-(<span id="matched">306</span> matched)
+(<span id="matched">309</span> matched)
 <table>
-<caption>306 Tagged Open Ruby Bugs as of 2021-09-03 05:45:19 +0900</caption>
+<caption>309 Tagged Open Ruby Bugs as of 2021-09-14 04:41:12 +0900</caption>
 <thead>
 <tr class=" Tags ">
 <th>Bug ID</th>
@@ -43,6 +42,48 @@
 </tr>
 </thead>
 <tbody>
+<tr class=" patch core ">
+<td><a href="https://bugs.ruby-lang.org/issues/18164">18164</a>
+</td>
+<td>patch core</td>
+<td><a href="https://bugs.ruby-lang.org/issues/18164">Segfault after spawn when using modified ENV</a>
+</td>
+</tr>
+<tr class=" core ">
+<td><a href="https://bugs.ruby-lang.org/issues/18158">18158</a>
+</td>
+<td>core</td>
+<td><a href="https://bugs.ruby-lang.org/issues/18158">Pathname#each_entry without block does not return Enumerator</a>
+</td>
+</tr>
+<tr class=" build ">
+<td><a href="https://bugs.ruby-lang.org/issues/18156">18156</a>
+</td>
+<td>build</td>
+<td><a href="https://bugs.ruby-lang.org/issues/18156">3.0.2 configuration checks by default for C++ compiler instead of C?</a>
+</td>
+</tr>
+<tr class=" core notbug ">
+<td><a href="https://bugs.ruby-lang.org/issues/18155">18155</a>
+</td>
+<td>core notbug</td>
+<td><a href="https://bugs.ruby-lang.org/issues/18155">(nil..nil).cover?(x) is true for all x since beginless ranges were introduced</a>
+</td>
+</tr>
+<tr class=" core ">
+<td><a href="https://bugs.ruby-lang.org/issues/18152">18152</a>
+</td>
+<td>core</td>
+<td><a href="https://bugs.ruby-lang.org/issues/18152">Fix theoretical bug with signals + qsort</a>
+</td>
+</tr>
+<tr class=" lib ">
+<td><a href="https://bugs.ruby-lang.org/issues/18151">18151</a>
+</td>
+<td>lib</td>
+<td><a href="https://bugs.ruby-lang.org/issues/18151">Incorrect Resolv result when DNS server is unreachable</a>
+</td>
+</tr>
 <tr class=" core ">
 <td><a href="https://bugs.ruby-lang.org/issues/18144">18144</a>
 </td>
@@ -104,13 +145,6 @@
 </td>
 <td>ractor</td>
 <td><a href="https://bugs.ruby-lang.org/issues/18128">Ractor allows class variables that have been used before</a>
-</td>
-</tr>
-<tr class=" patch core ">
-<td><a href="https://bugs.ruby-lang.org/issues/18126">18126</a>
-</td>
-<td>patch core</td>
-<td><a href="https://bugs.ruby-lang.org/issues/18126">Process termination three seconds after thread termination dumps core</a>
 </td>
 </tr>
 <tr class=" patch core ">
@@ -580,13 +614,6 @@
 </td>
 <td>ractor</td>
 <td><a href="https://bugs.ruby-lang.org/issues/17624">Ractor.receive is not thread-safe</a>
-</td>
-</tr>
-<tr class=" patch irb ">
-<td><a href="https://bugs.ruby-lang.org/issues/17623">17623</a>
-</td>
-<td>patch irb</td>
-<td><a href="https://bugs.ruby-lang.org/issues/17623">irb starts with some local variables already defined</a>
 </td>
 </tr>
 <tr class=" ractor ">
@@ -2113,13 +2140,6 @@
 </td>
 <td>encoding</td>
 <td><a href="https://bugs.ruby-lang.org/issues/7742">System encoding (Windows-1258) is not recognized by Ruby to  convert back to UTF-8 </a>
-</td>
-</tr>
-<tr class=" core ">
-<td><a href="https://bugs.ruby-lang.org/issues/7676">7676</a>
-</td>
-<td>core</td>
-<td><a href="https://bugs.ruby-lang.org/issues/7676">Comparison of Float::NAN in array behaves unexpectedly</a>
 </td>
 </tr>
 <tr class=" win build ">
