--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html>
 <head>
-<title>309 Tagged Open Ruby Bugs as of 2021-09-14 04:41:12 +0900</title>
+<title>307 Tagged Open Ruby Bugs as of 2021-09-15 06:47:20 +0900</title>
 <link rel="stylesheet"  href="app.css" />
 </head>
 <body>
@@ -31,9 +31,9 @@
 <input type="submit" value="unfixable" /></p>
 <label for="filter">Filter Tags:</label>
 <input id="filter" type="text" size="80" />
-(<span id="matched">309</span> matched)
+(<span id="matched">307</span> matched)
 <table>
-<caption>309 Tagged Open Ruby Bugs as of 2021-09-14 04:41:12 +0900</caption>
+<caption>307 Tagged Open Ruby Bugs as of 2021-09-15 06:47:20 +0900</caption>
 <thead>
 <tr class=" Tags ">
 <th>Bug ID</th>
@@ -42,11 +42,11 @@
 </tr>
 </thead>
 <tbody>
-<tr class=" patch core ">
-<td><a href="https://bugs.ruby-lang.org/issues/18164">18164</a>
+<tr class=" patch lib ">
+<td><a href="https://bugs.ruby-lang.org/issues/18165">18165</a>
 </td>
-<td>patch core</td>
-<td><a href="https://bugs.ruby-lang.org/issues/18164">Segfault after spawn when using modified ENV</a>
+<td>patch lib</td>
+<td><a href="https://bugs.ruby-lang.org/issues/18165">resolv: IPv6 link local addresses do not accept dash as a valid zone_id character</a>
 </td>
 </tr>
 <tr class=" core ">
@@ -1484,13 +1484,6 @@
 <td><a href="https://bugs.ruby-lang.org/issues/13864">Rinda multicast test failures due to missing default route</a>
 </td>
 </tr>
-<tr class=" patch ext ">
-<td><a href="https://bugs.ruby-lang.org/issues/13810">13810</a>
-</td>
-<td>patch ext</td>
-<td><a href="https://bugs.ruby-lang.org/issues/13810">Inconsistency between Date and Time.strftime(&quot;%v&quot;)</a>
-</td>
-</tr>
 <tr class=" ext ">
 <td><a href="https://bugs.ruby-lang.org/issues/13754">13754</a>
 </td>
@@ -1818,13 +1811,6 @@
 </td>
 <td>core</td>
 <td><a href="https://bugs.ruby-lang.org/issues/11183">Cumulative error on Complex::I ** 100000000000000000000000000000000</a>
-</td>
-</tr>
-<tr class=" refine ">
-<td><a href="https://bugs.ruby-lang.org/issues/11182">11182</a>
-</td>
-<td>refine</td>
-<td><a href="https://bugs.ruby-lang.org/issues/11182">Refinement with alias causes strange behavior</a>
 </td>
 </tr>
 <tr class=" win core ">
