--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html>
 <head>
-<title>307 Tagged Open Ruby Bugs as of 2021-09-15 06:47:20 +0900</title>
+<title>308 Tagged Open Ruby Bugs as of 2021-09-17 01:30:00 +0900</title>
 <link rel="stylesheet"  href="app.css" />
 </head>
 <body>
@@ -26,14 +26,14 @@
 <input type="submit" value="jit" />
 <input type="submit" value="autoload" />
 <input type="submit" value="parser" />
-<input type="submit" value="doc" />
 <input type="submit" value="misc" />
+<input type="submit" value="doc" />
 <input type="submit" value="unfixable" /></p>
 <label for="filter">Filter Tags:</label>
 <input id="filter" type="text" size="80" />
-(<span id="matched">307</span> matched)
+(<span id="matched">308</span> matched)
 <table>
-<caption>307 Tagged Open Ruby Bugs as of 2021-09-15 06:47:20 +0900</caption>
+<caption>308 Tagged Open Ruby Bugs as of 2021-09-17 01:30:00 +0900</caption>
 <thead>
 <tr class=" Tags ">
 <th>Bug ID</th>
@@ -42,6 +42,27 @@
 </tr>
 </thead>
 <tbody>
+<tr class=" core ">
+<td><a href="https://bugs.ruby-lang.org/issues/18171">18171</a>
+</td>
+<td>core</td>
+<td><a href="https://bugs.ruby-lang.org/issues/18171">`Marshal` ignores `Hash#compare_by_identity`</a>
+</td>
+</tr>
+<tr class=" core ">
+<td><a href="https://bugs.ruby-lang.org/issues/18170">18170</a>
+</td>
+<td>core</td>
+<td><a href="https://bugs.ruby-lang.org/issues/18170">Exception#inspect should not include newlines</a>
+</td>
+</tr>
+<tr class=" misc ">
+<td><a href="https://bugs.ruby-lang.org/issues/18169">18169</a>
+</td>
+<td>misc</td>
+<td><a href="https://bugs.ruby-lang.org/issues/18169">Local copies of gemified libraries are being released out of sync with their gems</a>
+</td>
+</tr>
 <tr class=" patch lib ">
 <td><a href="https://bugs.ruby-lang.org/issues/18165">18165</a>
 </td>
@@ -96,13 +117,6 @@
 </td>
 <td>jit</td>
 <td><a href="https://bugs.ruby-lang.org/issues/18142">Segmentation fault with Ruby 3.0.2</a>
-</td>
-</tr>
-<tr class=" patch core ">
-<td><a href="https://bugs.ruby-lang.org/issues/18141">18141</a>
-</td>
-<td>patch core</td>
-<td><a href="https://bugs.ruby-lang.org/issues/18141">Marshal load with proc yield strings before they are fully initialized </a>
 </td>
 </tr>
 <tr class=" os/arch ">
@@ -1244,13 +1258,6 @@
 </td>
 <td>cygwin build</td>
 <td><a href="https://bugs.ruby-lang.org/issues/15072">thread.c:4356:5: error: implicit declaration of function ‘ubf_list_atfork’</a>
-</td>
-</tr>
-<tr class=" patch core notbug ">
-<td><a href="https://bugs.ruby-lang.org/issues/15027">15027</a>
-</td>
-<td>patch core notbug</td>
-<td><a href="https://bugs.ruby-lang.org/issues/15027">When Struct#each method is overriden Struct#select and Struct#to_a use wrong collections</a>
 </td>
 </tr>
 <tr class=" patch lib ">
