--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html>
 <head>
-<title>306 Tagged Open Ruby Bugs as of 2021-09-18 03:56:31 +0900</title>
+<title>310 Tagged Open Ruby Bugs as of 2021-09-24 04:08:05 +0900</title>
 <link rel="stylesheet"  href="app.css" />
 </head>
 <body>
@@ -31,9 +31,9 @@
 <input type="submit" value="unfixable" /></p>
 <label for="filter">Filter Tags:</label>
 <input id="filter" type="text" size="80" />
-(<span id="matched">306</span> matched)
+(<span id="matched">310</span> matched)
 <table>
-<caption>306 Tagged Open Ruby Bugs as of 2021-09-18 03:56:31 +0900</caption>
+<caption>310 Tagged Open Ruby Bugs as of 2021-09-24 04:08:05 +0900</caption>
 <thead>
 <tr class=" Tags ">
 <th>Bug ID</th>
@@ -42,6 +42,48 @@
 </tr>
 </thead>
 <tbody>
+<tr class=" patch core ">
+<td><a href="https://bugs.ruby-lang.org/issues/18189">18189</a>
+</td>
+<td>patch core</td>
+<td><a href="https://bugs.ruby-lang.org/issues/18189">`rb_cString` can be NULL during `Init_Object`</a>
+</td>
+</tr>
+<tr class=" patch core ">
+<td><a href="https://bugs.ruby-lang.org/issues/18187">18187</a>
+</td>
+<td>patch core</td>
+<td><a href="https://bugs.ruby-lang.org/issues/18187">Float#clamp() returns ArgumentError (comparison of Float with 1 failed)</a>
+</td>
+</tr>
+<tr class=" win ">
+<td><a href="https://bugs.ruby-lang.org/issues/18186">18186</a>
+</td>
+<td>win</td>
+<td><a href="https://bugs.ruby-lang.org/issues/18186">SEGV with system command - MinGW?</a>
+</td>
+</tr>
+<tr class=" patch core ">
+<td><a href="https://bugs.ruby-lang.org/issues/18185">18185</a>
+</td>
+<td>patch core</td>
+<td><a href="https://bugs.ruby-lang.org/issues/18185">BasicObject is inserted in the middle of the inheritance tree.</a>
+</td>
+</tr>
+<tr class=" patch core ">
+<td><a href="https://bugs.ruby-lang.org/issues/18182">18182</a>
+</td>
+<td>patch core</td>
+<td><a href="https://bugs.ruby-lang.org/issues/18182">wrong number of arguments (given 1, expected 0) (ArgumentError) since 178ee1e801acb33d13b3e8a630f6ca4926c68fbc</a>
+</td>
+</tr>
+<tr class=" refine ">
+<td><a href="https://bugs.ruby-lang.org/issues/18180">18180</a>
+</td>
+<td>refine</td>
+<td><a href="https://bugs.ruby-lang.org/issues/18180">opt_newarray_min/max instructions ignore refined methods</a>
+</td>
+</tr>
 <tr class=" core ">
 <td><a href="https://bugs.ruby-lang.org/issues/18171">18171</a>
 </td>
@@ -49,10 +91,10 @@
 <td><a href="https://bugs.ruby-lang.org/issues/18171">`Marshal` ignores `Hash#compare_by_identity`</a>
 </td>
 </tr>
-<tr class=" core ">
+<tr class=" patch core ">
 <td><a href="https://bugs.ruby-lang.org/issues/18170">18170</a>
 </td>
-<td>core</td>
+<td>patch core</td>
 <td><a href="https://bugs.ruby-lang.org/issues/18170">Exception#inspect should not include newlines</a>
 </td>
 </tr>
@@ -70,10 +112,10 @@
 <td><a href="https://bugs.ruby-lang.org/issues/18165">resolv: IPv6 link local addresses do not accept dash as a valid zone_id character</a>
 </td>
 </tr>
-<tr class=" core ">
+<tr class=" patch core ">
 <td><a href="https://bugs.ruby-lang.org/issues/18158">18158</a>
 </td>
-<td>core</td>
+<td>patch core</td>
 <td><a href="https://bugs.ruby-lang.org/issues/18158">Pathname#each_entry without block does not return Enumerator</a>
 </td>
 </tr>
@@ -96,13 +138,6 @@
 </td>
 <td>core</td>
 <td><a href="https://bugs.ruby-lang.org/issues/18152">Fix theoretical bug with signals + qsort</a>
-</td>
-</tr>
-<tr class=" lib ">
-<td><a href="https://bugs.ruby-lang.org/issues/18151">18151</a>
-</td>
-<td>lib</td>
-<td><a href="https://bugs.ruby-lang.org/issues/18151">Incorrect Resolv result when DNS server is unreachable</a>
 </td>
 </tr>
 <tr class=" core ">
@@ -425,13 +460,6 @@
 </td>
 <td>parser</td>
 <td><a href="https://bugs.ruby-lang.org/issues/17925">Pattern matching syntax using semicolon one-line</a>
-</td>
-</tr>
-<tr class=" patch core ">
-<td><a href="https://bugs.ruby-lang.org/issues/17885">17885</a>
-</td>
-<td>patch core</td>
-<td><a href="https://bugs.ruby-lang.org/issues/17885">require_relative and require should be compatible with each other when symlinked files are used</a>
 </td>
 </tr>
 <tr class=" ractor cygwin ">
